<resources>
    <string name="app_name">Tappy External NFC</string>
    <string name="activity_title">Tappy External NFC</string>
    <string name="active_devices">Active Devices</string>
    <string name="autolaunch_urls">Open URLs</string>
    <string name="scan">Scan</string>
    <string name="nearby_devices">Nearby Devices</string>
    <string name="stop_scanning">Stop scan</string>
    <string name="bluetooth_must_be_supported">Bluetooth must be supported</string>
    <string name="coarse_location_needed">Coarse location needed to search for BLE devices</string>
    <string name="bluetooth_must_be_enabled">Bluetooth must be enabled</string>
    <string name="active_tappies_notification_title">Tappies Active</string>
    <string name="one_tappy_active_notification_content">One Tappy active</string>
    <string name="multiple_tappies_active_notification_content">%d Tappies active</string>

    <string name="automatic_url_launching_enabled">Automatic URL launching enabled</string>
    <string name="automatic_url_launching_disabled">Automatic URL launching disabled</string>
    <string name="open_url_with">Open URL with</string>

    <string name="coarse_location_needed_rationale">Coarse location is needed to search for BLE devices</string>
    <string name="settings">Settings</string>
    <string name="tappy_usb_name">TappyUSB</string>
    <string name="unknown_tappy_name">Unknown Tappy</string>
    <string name="select_tappy_text">Available Tappies</string>
    <string name="status_connecting">Connecting</string>
    <string name="status_ready">Ready</string>
    <string name="status_disconnecting">Disconnecting</string>
    <string name="status_connected">Connected</string>
    <string name="status_error">Error</string>
    <string name="status_closed">Closed</string>
    <string name="active_devices_heading">Active Tappies (%1$d)</string>
    <string name="remove_all_tappies">Disconnect all Tappies</string>
    <string name="tappy_channel_name">Active Tappies</string>
    <string name="tappy_channel_description">Displays the currently connected Tappies</string>
</resources>
